[gd_scene load_steps=3 format=2]

[ext_resource path="res://Controls/TextureTextButton.gd" type="Script" id=1]
[ext_resource path="res://Fonts/PandoraPanicFont.tres" type="DynamicFont" id=2]

[node name="TextureTextButton" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
LabelOffset = Vector2( 0, 8 )

[node name="Label" type="Label" parent="."]
margin_top = 8.0
margin_right = 40.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0.917647, 0.956863, 0.203922, 1 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_TextureTextButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureTextButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureTextButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureTextButton_mouse_exited"]
